--- a/macros/types/Cargo.toml
+++ b/macros/types/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "elastic_types_macros"
-version = "0.5.2"
+name = "elastic_types_derive"
+version = "0.6.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "Compile-time code generation for Elasticsearch type implementations."
 repository = "https://github.com/elastic-rs/elastic-types"
 
 [lib]
-name = "elastic_types_macros"
+name = "elastic_types_derive"
 proc-macro = true
 
 [features]
