--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.5.2"
+version = "0.6.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
@@ -10,8 +10,8 @@ repository = "https://github.com/elastic-rs/elastic-types"
 [features]
 nightly = [
 	"elastic_date_macros/nightly",
-	"elastic_types_macros",
-	"serde_macros"
+	"elastic_types_derive",
+	"serde_derive"
 ]
 nightly-testing = ["nightly"]
 
@@ -23,9 +23,9 @@ geo = "~0.0.7"
 geohash = "~0.2.7"
 geojson = { version = "~0.4.0", features = [ "with-serde" ] }
 
-serde_macros = { version = "~0.8.0", optional = true }
+serde_derive = { version = "~0.8.0", optional = true }
+elastic_types_derive = { version = "~0.6.0", optional = true, path = "../macros/types" }
 elastic_date_macros = "~0.5.1"
-elastic_types_macros = { version = "~0.5.1", optional = true }
 
 [dev-dependencies]
 json_str = "^0.*"
