--- a/types/tests/codegen_demo/Cargo.toml
+++ b/types/tests/codegen_demo/Cargo.toml
@@ -7,4 +7,4 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 serde = "~0.8.0"
 serde_macros = "~0.8.0"
 elastic_types = { version = "*", path = "../../" }
-elastic_types_macros = { version = "*", path = "../../../macros/types" }
+elastic_types_derive = { version = "*", path = "../../../macros/types" }
