--- a/samples/basic/Cargo.toml
+++ b/samples/basic/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 nightly-testing = []
 
 [dependencies]
-elastic_hyper = "~0.3.0"
+elastic_hyper = { version = "*", path = "../../" }
+elastic_requests = { version = "*", git = "https://github.com/elastic-rs/elastic-requests" }
 json_str = "*"
 hyper = "~0.9.0"
