--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.4.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on Hyper."
-documentation = "https://docs.rs/elastic_types/0.3.2/elastic_hyper/"
+documentation = "https://docs.rs/elastic_types/0.4.0/elastic_hyper/"
 repository = "https://github.com/elastic-rs/elastic-hyper"
-exclude = [ "samples", "codegen" ]
+exclude = [ "samples" ]
 
 [features]
 default = [ "ssl" ]
 ssl = [ "hyper/ssl" ]
 
 [dependencies]
-elastic_requests = { version = "*", git = "https://github.com/elastic-rs/elastic-requests" }
+elastic_requests = "~0.1.0"
 hyper = { version = "~0.9.0", default-features = false }
 url = "~1.1.0"
 
