--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -15,11 +15,11 @@ nightly = ["elastic_reqwest/nightly"]
 error-chain = "~0.7.0"
 serde = "~1"
 serde_json = "~1"
-reqwest = "~0.4.0"
+reqwest = "~0.6.0"
 
-elastic_reqwest = "~0.7.1"
+elastic_reqwest = { version = "~0.8.0", path = "../../elastic-hyper" }
 elastic_responses = "~0.7.2"
-elastic_types = "~0.16.0"
+elastic_types = { version = "~0.17.0", path = "../../elastic-types/types" }
 
 [dev-dependencies]
 json_str = "^0.*"
