--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ nightly = []
 
 [dependencies]
 elastic_requests = "~0.4.1"
-elastic_responses = { version = "~0.8.0", path = "../../elastic-responses" }
+elastic_responses = { version = "~0.8.0", path = "../elastic-responses" }
 reqwest = "~0.6.0"
 url = "~1"
 
