--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ nightly = []
 [dependencies]
 serde = "~1"
 elastic_requests = "~0.4.1"
-elastic_responses = { version = "~0.8.0", path = "../elastic-responses" }
+elastic_responses = "~0.8.0"
 reqwest = "~0.6.0"
 url = "~1"
 
