--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
       travis-cargo --only nightly test -- --features nightly &&
       travis-cargo test &&
       travis-cargo bench &&
-      cd samples/basic &&
+      cd examples/basic &&
       travis-cargo build &&
       cd ../bulk &&
       travis-cargo build &&
