--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ exclude = [ "samples" ]
 nightly = []
 
 [dependencies]
+serde = "~1"
 elastic_requests = "~0.4.1"
 elastic_responses = { version = "~0.8.0", path = "../elastic-responses" }
 reqwest = "~0.6.0"
