--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -17,8 +17,8 @@ serde = "~1"
 serde_json = "~1"
 reqwest = "~0.6.0"
 
-elastic_reqwest = { version = "~0.8.0", path = "../../elastic-hyper" }
-elastic_types = { version = "~0.17.0", path = "../../elastic-types/types" }
+elastic_reqwest = "~0.8.0"
+elastic_types = "~0.17.0"
 
 [dev-dependencies]
 json_str = "^0.*"
