--- a/types-derive/Cargo.toml
+++ b/types-derive/Cargo.toml
@@ -11,6 +11,6 @@ name = "elastic_types_derive"
 proc-macro = true
 
 [dependencies]
-elastic_types_derive_internals = { version = "~0.17.1", path = "../types-derive-internals" }
+elastic_types_derive_internals = "~0.17.1"
 syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
 quote = "~0.3.0"
