--- a/benches/rust/elastic/Cargo.toml
+++ b/benches/rust/elastic/Cargo.toml
@@ -9,6 +9,7 @@ serde_derive = "*"
 json_str = { version = "*", features = ["nightly"]}
 
 elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
+elastic_derive = { version = "*", path = "../../../derive" }
 
 time = "*"
 stopwatch = "*"
