--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -23,4 +23,4 @@ elastic_types = "~0.17.1"
 [dev-dependencies]
 json_str = "^0.*"
 serde_derive = "~1"
-elastic_derive = { version = "~0.12.0", path = "../derive" }
+elastic_derive = "~0.12.0"
