--- a/elastic/examples/async_sample/Cargo.toml
+++ b/elastic/examples/async_sample/Cargo.toml
@@ -7,9 +7,6 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 elastic_requests = "*"
 elastic_responses = "*"
 
-serde = "*"
-serde_json = "*"
-
 tokio-core = "*"
 tokio-proto = "*"
 futures = "*"
@@ -18,3 +15,5 @@ memmap = "*"
 hyper = { git = "https://github.com/hyperium/hyper.git" }
 
 quick-error = "*"
+
+string_cache = { version = "*", git = "https://github.com/KodrAus/string-cache.git", branch = "chore/serde-1.0" }
