--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.17.2"
+version = "0.18.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
@@ -10,12 +10,12 @@ repository = "https://github.com/elastic-rs/elastic-types"
 [dependencies]
 serde = "~1"
 serde_json = "~1"
-chrono = { version = "~0.3.1", features = [ "serde" ]}
+chrono = { version = "~0.4.0", features = [ "serde" ]}
 geo = "~0.4.0"
 geohash = "~0.4.0"
 geojson = "~0.8.0"
 serde_derive = "~1"
-elastic_types_derive = "~0.17.2"
+elastic_types_derive = { version = "~0.18.0", path = "../types-derive" }
 
 [dev-dependencies]
 json_str = "^0.*"
