--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,11 @@ nightly = []
 serde = "~1"
 elastic_requests = "~0.4.1"
 elastic_responses = "~0.9.0"
-reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git" }
+reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
 url = "~1"
+bytes = "*"
+futures = "*"
 
 [dev-dependencies]
 json_str = "^0.*"
+tokio-core = "*"
