--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ nightly = []
 serde = "~1"
 elastic_requests = "~0.4.1"
 elastic_responses = "~0.9.0"
-reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
+reqwest = { version = "*", git = "https://github.com/kodraus/reqwest.git", branch = "feat/async-decoder", features = ["unstable"] }
 url = "~1"
 bytes = "*"
+tokio-core = "*"
+tokio-io = "*"
 futures = "*"
 serde_json = "~1"
 quick-error = "~1"
 
 [dev-dependencies]
 json_str = "^0.*"
-tokio-core = "*"
