--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic"
-version = "0.13.0"
+version = "0.13.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 keywords = ["elasticsearch", "search"]
@@ -27,4 +27,4 @@ elastic_types = "~0.18.0"
 [dev-dependencies]
 json_str = "^0.*"
 serde_derive = "~1"
-elastic_derive = "~0.13.0"
+elastic_derive = { version = "~0.13.1", path = "../derive" }
