--- a/benches/rust/prepare/Cargo.toml
+++ b/benches/rust/prepare/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "elastic_bench_raw"
+name = "prepare"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [dependencies]
-json_str = { version = "*", features = ["nightly"]}
-
 elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
-
-measure = { version = "*", path = "../measure" }
+elastic_derive = { version = "*", path = "../../../derive" }
+serde = "*"
+serde_derive = "*"
