--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ matrix:
     - rust: nightly
       env:
         - CRATE="types"
+    - rust: nightly
+      env:
+        - CRATE="tests/derive-compile-test"
 env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
