--- a/benches/rust/elastic_bulk/Cargo.toml
+++ b/benches/rust/elastic_bulk/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 
 [features]
+default = ["profile_memory","gzip"]
 profile_memory = []
+errors_only = []
+gzip = []
 
 [dependencies]
+reqwest = "*"
 elastic = { version = "*", path = "../../../elastic", features = ["nightly"] }
 string_cache = { version = "*", optional = true }
 inlinable_string = { version = "*", features = ["serde"], optional = true }
