--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -19,12 +19,12 @@ nightly = ["elastic_reqwest/nightly"]
 error-chain = "~0.9.0"
 serde = "~1"
 serde_json = "~1"
-reqwest = "~0.6.0"
+reqwest = { version = "*", git = "https://github.com/KodrAus/reqwest.git", branch = "feat/async-decoder", features = ["unstable"] }
 
-elastic_reqwest = "~0.8.0"
-elastic_types = "~0.18.0"
+elastic_reqwest = { version = "*", path = "../../elastic-hyper" }
+elastic_types = "~0.19.0"
 
 [dev-dependencies]
 json_str = "^0.*"
 serde_derive = "~1"
-elastic_derive = "~0.13.1"
+elastic_derive = { version = "~0.14.0", path = "../derive" }
