--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -16,6 +16,8 @@ appveyor = { repository = "elastic-rs/elastic" }
 nightly = ["elastic_reqwest/nightly"]
 
 [dependencies]
+log = "*"
+uuid = { version = "*", features = [ "v4" ] }
 error-chain = "~0.9.0"
 serde = "~1"
 serde_json = "~1"
@@ -25,6 +27,7 @@ elastic_reqwest = "~0.8.0"
 elastic_types = "~0.18.0"
 
 [dev-dependencies]
+env_logger = "*"
 json_str = "^0.*"
 serde_derive = "~1"
 elastic_derive = "~0.13.1"
