--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -16,8 +16,8 @@ appveyor = { repository = "elastic-rs/elastic" }
 nightly = ["elastic_reqwest/nightly"]
 
 [dependencies]
-log = "*"
-uuid = { version = "*", features = [ "v4" ] }
+log = "~0.3.8"
+uuid = { version = "~0.5.1", features = [ "v4" ] }
 error-chain = "~0.9.0"
 serde = "~1"
 serde_json = "~1"
@@ -27,7 +27,7 @@ elastic_reqwest = "~0.8.0"
 elastic_types = "~0.18.0"
 
 [dev-dependencies]
-env_logger = "*"
+env_logger = "~0.4.3"
 json_str = "^0.*"
 serde_derive = "~1"
 elastic_derive = "~0.13.1"
