--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -16,7 +16,7 @@ appveyor = { repository = "elastic-rs/elastic" }
 nightly = ["elastic_reqwest/nightly"]
 
 [dependencies]
-error-chain = "~0.9.0"
+error-chain = "0.11.0-rc.2"
 serde = "~1"
 serde_json = "~1"
 reqwest = { version = "*", git = "https://github.com/KodrAus/reqwest.git", branch = "feat/async-decoder", features = ["unstable"] }
