--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -25,7 +25,7 @@ tokio-core = "*"
 tokio-io = "*"
 futures-cpupool = "*"
 
-elastic_reqwest = { version = "*", path = "../../elastic-hyper" }
+elastic_reqwest = { version = "*", git = "https://github.com/elastic-rs/elastic-reqwest.git", branch = "feat/async" }
 elastic_types = "~0.19.0"
 
 [dev-dependencies]
