--- a/elastic/Cargo.toml
+++ b/elastic/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.13.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 keywords = ["elasticsearch", "search"]
-description = "A modular client for the Elasticsearch REST API."
+description = "A modular sync and async client for the Elasticsearch REST API."
 documentation = "https://docs.rs/elastic/"
 repository = "https://github.com/elastic-rs/elastic"
 
