--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,4 @@ before_script:
       pip install 'travis-cargo<0.2' --user &&
       export PATH=$HOME/.local/bin:$PATH
 
-script:
-  - |
-      ./ci/${CHANNEL}.sh
+script: ./ci/travis.sh
