--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 sudo: false
 language: rust
 
-rust:
-  - nightly
-  - stable
+matrix:
+  include:
+    - rust: stable
+      env:
+        - CHANNEL="stable"
+    - rust: nightly
+      env:
+        - CHANNEL="nightly"
 
 script:
   - |
       cargo test &&
-      cargo bench
+      if [ "$CHANNEL" == "nightly" ]; then cargo bench; fi
