--- a/benches/elastic/Cargo.toml
+++ b/benches/elastic/Cargo.toml
@@ -2,9 +2,10 @@
 name = "elastic_bench"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
-elastic = { version = "*", path = "../../src/elastic", features = ["nightly"] }
+elastic = { version = "*", path = "../../src/elastic" }
 elastic_derive = { version = "*", path = "../../src/elastic_derive" }
 serde = "*"
 serde_derive = "*"
