--- a/benches/elastic_raw/Cargo.toml
+++ b/benches/elastic_raw/Cargo.toml
@@ -2,6 +2,7 @@
 name = "elastic_bench_raw"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
 elastic = { version = "*", path = "../../src/elastic" }
