--- a/benches/prepare/Cargo.toml
+++ b/benches/prepare/Cargo.toml
@@ -2,9 +2,10 @@
 name = "prepare"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
-elastic = { version = "*", path = "../../elastic", features = ["nightly"] }
-elastic_derive = { version = "*", path = "../../derive" }
+elastic = { version = "*", path = "../../src/elastic" }
+elastic_derive = { version = "*", path = "../../src/elastic_derive" }
 serde = "*"
 serde_derive = "*"
