--- a/benches/rs-es/Cargo.toml
+++ b/benches/rs-es/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rs-es_bench"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [features]
 ssl = ["rs-es/ssl"]
