--- a/examples/account_sample/Cargo.toml
+++ b/examples/account_sample/Cargo.toml
@@ -2,6 +2,7 @@
 name = "account-sample"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
 elastic = { version = "*", path = "../../src/elastic" }
