--- a/examples/async_raw_sample/Cargo.toml
+++ b/examples/async_raw_sample/Cargo.toml
@@ -2,6 +2,7 @@
 name = "async-raw-sample"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
 elastic_requests = { version = "*", path = "../../src/requests" }
