--- a/src/types/tests/derive_compile_test/Cargo.toml
+++ b/src/types/tests/derive_compile_test/Cargo.toml
@@ -2,6 +2,7 @@
 name = "derive_compile_test"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
+publish = false
 
 [dependencies]
 elastic_types = { version = "*", path = "../../" }
