--- a/src/reqwest/Cargo.toml
+++ b/src/reqwest/Cargo.toml
@@ -6,10 +6,11 @@ license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on reqwest."
 documentation = "https://docs.rs/elastic_reqwest/"
 repository = "https://github.com/elastic-rs/elastic"
-exclude = [ "samples" ]
 
 [dependencies]
 serde = "~1"
+serde_derive = "~1"
+serde_json = "~1"
 elastic_requests = { version = "~0.20.0", path = "../requests" }
 elastic_responses = { version = "~0.20.0", path = "../responses" }
 reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
@@ -17,7 +18,6 @@ url = "~1"
 bytes = "*"
 tokio-core = "*"
 futures = "*"
-serde_json = "~1"
 quick-error = "~1"
 
 [dev-dependencies]
