--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "elastic"
-version = "0.20.0"
+version = "0.20.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 keywords = ["elasticsearch", "search"]
 description = "A modular sync and async client for the Elasticsearch REST API."
 documentation = "https://docs.rs/elastic/"
 repository = "https://github.com/elastic-rs/elastic"
+readme = "README.md"
 
 [badges]
 travis-ci = { repository = "elastic-rs/elastic" }
