--- a/src/reqwest/Cargo.toml
+++ b/src/reqwest/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "elastic_reqwest"
-version = "0.20.0"
+version = "0.20.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
 license = "Apache-2.0"
 description = "A lightweight implementation of the Elasticsearch API based on reqwest."
 documentation = "https://docs.rs/elastic_reqwest/"
 repository = "https://github.com/elastic-rs/elastic"
-exclude = [ "samples" ]
+readme = "README.md"
 
 [dependencies]
 serde = "~1"
