--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "elastic_types"
-version = "0.20.0"
+version = "0.20.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
 documentation = "https://docs.rs/elastic_types/"
 repository = "https://github.com/elastic-rs/elastic"
+readme = "README.md"
 
 [dependencies]
 serde = "~1"
