--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -19,6 +19,7 @@ log = "~0.3.8"
 uuid = { version = "~0.5.1", features = [ "v4" ] }
 serde = "~1"
 serde_json = "~1"
+serde_derive = "~1"
 reqwest = { version = "~0.8.0", features = ["unstable"] }
 futures = "~0.1.16"
 tokio-core = "~0.1.9"
