--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -14,9 +14,12 @@ travis-ci = { repository = "elastic-rs/elastic" }
 appveyor = { repository = "elastic-rs/elastic" }
 
 [dependencies]
+quick-error = "~1"
 error-chain = "0.11.0"
 log = "~0.3.8"
 uuid = { version = "~0.5.1", features = [ "v4" ] }
+url = "~1.5.1"
+bytes = "~0.4.5"
 serde = "~1"
 serde_json = "~1"
 serde_derive = "~1"
@@ -25,7 +28,8 @@ futures = "~0.1.16"
 tokio-core = "~0.1.9"
 futures-cpupool = "~0.1.6"
 
-elastic_reqwest = { version = "~0.20.2", path = "../reqwest" }
+elastic_requests = { version = "~0.20.2", path = "../requests" }
+elastic_responses = { version = "~0.20.2", path = "../responses" }
 elastic_types = { version = "~0.20.0", path = "../types" }
 
 [dev-dependencies]
