--- a/src/queries/samples/search/Cargo.toml
+++ b/src/queries/samples/search/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 authors = ["Stephan Buys <stephan.buys@panoptix.co.za>"]
 
 [dependencies]
-elastic-queries = { version = "*", path = "../../" }
+elastic_queries = { path = "../../" }
 env_logger = "0.4.3"
 futures = "0.1.15"
 futures-cpupool = "0.1.5"
