--- a/src/requests_codegen/Cargo.toml
+++ b/src/requests_codegen/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 publish = false
 
 [dependencies]
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
-syn = { version = "*", features = ["full"] }
-quote = "*"
-Inflector = "*"
+serde = "~1"
+serde_json = "~1"
+serde_derive = "~1"
+syn = { version = "~0.11", features = ["full"] }
+quote = "~0.3"
+Inflector = "~0.11"
 
 [dev-dependencies]
 json_str = "*"
