--- a/tests/run/Cargo.toml
+++ b/tests/run/Cargo.toml
@@ -13,6 +13,6 @@ serde_derive = "~1"
 serde_json = "~1"
 futures = "~0.1.16"
 tokio-core = "~0.1.9"
-tokio-timer = "*"
+tokio-timer = "~0.2.1"
 futures-cpupool = "~0.1.6"
-term-painter = "*"
+term-painter = "~0.2.4"
