initial work on bulk

--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -30,6 +30,8 @@ tokio-core = "~0.1.9"
 tokio-io = "~0.1.4"
 futures-cpupool = "~0.1.6"
 fluent_builder = "~0.5"
+tokio-timer = "~0.1.2"
+crossbeam-channel = "~0.1.2"
 
 elastic_requests = { version = "~0.20.2", path = "../requests" }
 elastic_responses = { version = "~0.20.2", path = "../responses" }
