--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -16,6 +16,7 @@ geo = "~0.4.0"
 geohash = "~0.4.0"
 geojson = "~0.9.0"
 serde_derive = "~1"
+# TODO: Move this to a `dev-dependency`
 elastic_types_derive = { version = "~0.20.0", path = "../types_derive" }
 
 [dev-dependencies]
