--- a/tests/run/Cargo.toml
+++ b/tests/run/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "~1"
 futures = "~0.1"
 tokio = "~0.1"
 tokio-threadpool = "~0.1"
+tokio-timer = "~0.2"
 term-painter = "~0.2"
 clap = "~2"
 env_logger = "~0.6"
