--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic"
-version = "0.20.10"
+version = "0.21.0-pre.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "MIT/Apache-2.0"
 keywords = ["elasticsearch", "search"]
