--- a/src/requests/Cargo.toml
+++ b/src/requests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_requests"
-version = "0.20.10"
+version = "0.21.0-pre.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "MIT/Apache-2.0"
 description = "Code generated request types for the Elasticsearch REST API."
