--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types"
-version = "0.20.10"
+version = "0.21.0-pre.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "MIT/Apache-2.0"
 description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
