--- a/src/types_derive_internals/Cargo.toml
+++ b/src/types_derive_internals/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_types_derive_internals"
-version = "0.20.10"
+version = "0.21.0-pre.1"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 license = "MIT/Apache-2.0"
 description = "Codegen internals for elastic_types."
