--- a/examples/account_sample/Cargo.toml
+++ b/examples/account_sample/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 publish = false
 
 [dependencies]
-elastic = { version = "~0.21.0-pre.1", path = "../../src/elastic" }
-elastic_derive = { version = "~0.21.0-pre.1", path = "../../src/elastic_derive" }
+elastic = { version = "~0.21.0-pre.2", path = "../../src/elastic" }
+elastic_derive = { version = "~0.21.0-pre.2", path = "../../src/elastic_derive" }
 
-quick-error = "*"
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
+quick-error = "~1"
+serde = "~1"
+serde_json = "~1"
+serde_derive = "~1"
