--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -24,7 +24,7 @@ http = "~0.1"
 serde = "~1"
 serde_json = "~1"
 serde_derive = "~1"
-reqwest = "~0.9"
+reqwest = { version = "~0.9", default-features = false, features = ["rustls-tls"]}
 futures = "~0.1"
 tokio = "~0.1"
 tokio-threadpool = "~0.1"
