--- a/src/elastic_derive/Cargo.toml
+++ b/src/elastic_derive/Cargo.toml
@@ -13,9 +13,10 @@ proc-macro = true
 [dependencies]
 serde = "~1"
 serde_json = "~1"
-syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
-quote = "~0.3.0"
-serde_derive_internals = { version = "~0.15.0", default-features = false }
+proc-macro2 = "~1"
+syn = { version = "~1", features = ["visit", "parsing", "full"] }
+quote = "~1"
+serde_derive_internals = { version = "~0.25", default-features = false }
 quick-error = "~1"
 nom = "~3"
 chrono = { version = "~0.4.0", features = [ "serde" ]}
