--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -15,12 +15,22 @@ travis-ci = { repository = "elastic-rs/elastic" }
 appveyor = { repository = "elastic-rs/elastic" }
 
 [features]
+default = [
+    "geo-types"
+]
+
 rustls-tls = [
     "reqwest/rustls-tls"
 ]
 
 default-tls = [
     "reqwest/default-tls"
+]
+
+geo-types = [
+    "geo",
+    "geohash",
+    "geojson"
 ]
 
 [dependencies]
@@ -43,9 +53,9 @@ tokio-threadpool = "~0.1"
 fluent_builder = "~0.6"
 crossbeam-channel = "~0.3"
 chrono = { version = "~0.4.0", features = [ "serde" ]}
-geo = "~0.12.0"
-geohash = "~0.9.0"
-geojson = "~0.16.0"
+geo = { version = "~0.12.0", optional = true }
+geohash = { version = "~0.9.0", optional = true }
+geojson = { version = "~0.16.0", optional = true }
 
 [dev-dependencies]
 env_logger = "~0.6"
