--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -15,6 +15,12 @@ travis-ci = { repository = "elastic-rs/elastic" }
 appveyor = { repository = "elastic-rs/elastic" }
 
 [features]
+
+default = ["sync_sender", "async_sender"]
+
+sync_sender = ["reqwest"]
+async_sender = ["reqwest", "futures", "tokio", "tokio-threadpool"]
+
 rustls-tls = [
     "reqwest/rustls-tls"
 ]
@@ -30,16 +36,16 @@ quick-error = "~1"
 error-chain = "~0.11"
 log = "~0.4"
 uuid = { version = "~0.7", features = [ "v4" ] }
-url = "~2"
+url = "~1"
 bytes = "~0.4"
 http = "~0.1"
 serde = "~1"
 serde_json = "~1"
 serde_derive = "~1"
-reqwest = { version = "~0.9", default-features = false }
-futures = "~0.1"
-tokio = "~0.1"
-tokio-threadpool = "~0.1"
+reqwest = { version = "~0.9", optional = true, default-features = false }
+futures = { version = "~0.1", optional = true }
+tokio = { version = "~0.1", optional = true }
+tokio-threadpool = { version = "~0.1", optional = true }
 fluent_builder = "~0.6"
 crossbeam-channel = "~0.3"
 chrono = { version = "~0.4.0", features = [ "serde" ]}
