--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -56,6 +56,7 @@ chrono = { version = "~0.4.0", features = [ "serde" ]}
 geo = { version = "~0.12.0", optional = true }
 geohash = { version = "~0.9.0", optional = true }
 geojson = { version = "~0.16.0", optional = true }
+base64 = { version = "~0.11.0" }
 
 [dev-dependencies]
 env_logger = "~0.6"
