--- a/src/elastic/Cargo.toml
+++ b/src/elastic/Cargo.toml
@@ -37,7 +37,7 @@ geo-types = [
 elastic_derive = { version = "~0.21.0-pre.5", path = "../elastic_derive" }
 
 quick-error = "~1"
-error-chain = "0.12.1"
+error-chain = "~0.12"
 log = "~0.4"
 uuid = { version = "~0.8", features = [ "v4" ] }
 url = "~2"
@@ -52,11 +52,11 @@ tokio = "~0.1"
 tokio-threadpool = "~0.1"
 fluent_builder = "~0.6"
 crossbeam-channel = "~0.4"
-chrono = { version = "~0.4.0", features = [ "serde" ]}
-geo = { version = "~0.12.0", optional = true }
-geohash = { version = "~0.9.0", optional = true }
-geojson = { version = "~0.17.0", optional = true }
-base64 = { version = "~0.11.0" }
+chrono = { version = "~0.4", features = [ "serde" ]}
+geo = { version = "~0.12", optional = true }
+geohash = { version = "~0.9", optional = true }
+geojson = { version = "~0.17", optional = true }
+base64 = { version = "~0.11" }
 
 [dev-dependencies]
 env_logger = "~0.7"
